hard-gists/4365631/run.log
=== Docker Run Log for 4365631 ===
Started at: Mi 29. Okt 14:36:30 CET 2025

[2025-10-29 14:36:30] START: Running container for 4365631
[2025-10-29 14:36:31] SUCCESS: Container 8dd52b59d2945923abc671aa8311bcb67350ac521422397b8776f4678e2dedae started for 4365631
=== Container logs for 4365631 ===
  File "/snippet.py", line 24
    print "Points on flag:"
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4365631 ===
[2025-10-29 14:36:33] INFO: Container 8dd52b59d2945923abc671aa8311bcb67350ac521422397b8776f4678e2dedae has stopped
